--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test": "ng test"
   },
   "dependencies": {
-    "primeng": "17.12.0",
     "@angular-devkit/build-angular": "^17.3.1",
     "@angular/animations": "^17.3.1",
     "@angular/cdk": "^17.3.1",
@@ -24,9 +23,13 @@
     "@angular/platform-browser-dynamic": "^17.3.1",
     "@angular/platform-server": "^17.3.1",
     "@angular/router": "^17.3.1",
+    "@ngrx/effects": "^17.2.0",
+    "@ngrx/store": "^17.2.0",
+    "@ngrx/store-devtools": "^17.2.0",
     "chart.js": "3.3.2",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
+    "primeng": "17.12.0",
     "quill": "1.3.7",
     "rxjs": "~7.8.1",
     "tslib": "^2.5.0",
