--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^17.3.1",
     "@angular/router": "^17.3.1",
     "@ngrx/effects": "^17.2.0",
+    "@ngrx/router-store": "^17.2.0",
     "@ngrx/store": "^17.2.0",
     "@ngrx/store-devtools": "^17.2.0",
     "chart.js": "3.3.2",
