--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "primeng-data-view-layout-demo",
-  "description": "PrimeNG DataViewLayoutDemo",
+  "name": "Movies-Hub",
+  "description": "Movies Hub",
   "license": "MIT",
   "keywords": [],
   "scripts": {
